--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,9 +12,6 @@
             <a href="#services">Услуги</a>
             <a href="#contacts">Контакты</a>
         </nav>
-        <div>
-            Наш e-mail: <a href="mailto:mail@mail.ru">mail@mail.ru</a>
-        </div>
         <div>
             <a href="tel:+79039999999">+7 903 999-99-99</a>
             <button>Заказать звонок</button>
