basket delivery options block added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <button>Заказать звонок</button>
         </div>
     </header>
-    
+    <h2>
+        Выберете пункт доставки:
+    </h2>
 </body>
 </html>
